Add HTML elements

--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,51 @@
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
+    <meta charset="utf-8">
     <title>Ready, Set, Travel</title>
+    <link rel="stylesheet" type="text/scss" href="./css/base.scss">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
-    <h1>Webpack Starter Kit</h1>
-    <img src="./images/turing-logo.png" alt="turing logo" height="100px" width="100px">
+    <header>
+      <h2>"Yeah, it's that easy..."</h2>
+      <h2>Welcome Traveler!</h2>
+      <h1>Ready, Set, Travel</h1>
+    </header>
+    <aside>
+      <h2>Trips</h2>
+      <h3>Present</h3>
+        <div>
 
+        </div>
+      <h3>Pending</h3>
+        <div>
+
+        </div>
+      <h3>Past</h3>
+        <div>
+
+      </div>
+      <h3>Upcoming</h3>
+      <div>
+
+      </div>
+    </aside>
+    <main>
+      <form action="">
+        <h2>Book A Trip!</h2>
+        <input type="text" placeholder="Date">
+        <input type="text" placeholder="Duration">
+        <input type="text" placeholder="Number of Travelers">
+        <h3>Pick a Destination Below</h3>
+      </form>
+      <section>
+        <h2>All Destinations</h2>
+        <div>
+
+        </div>
+      </section>
+    </main>
     <!-- Do not include the index.js or main.bundle.js file here - it is done automatically by the webpack server -->
   </body>
 </html>
