Add flexbox to header and sidebar

--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,10 @@
   </head>
   <body>
     <header>
-      <img src="" alt="">
-      <h2>"Yeah, it's that easy..."</h2>
+      <div>
+        <img src="" alt="">
+        <h2>"Yeah, it's that easy..."</h2>
+      </div>
       <h2>Welcome Traveler!</h2>
       <h1>Ready, Set, Travel</h1>
     </header>
@@ -34,12 +36,14 @@
     </aside>
     <form action="">
       <h2>Request A Trip!</h2>
-      <label for="date">Date</label>
-      <input type="text" name="date" placeholder="Date">
-      <label for="duration">Duration</label>
-      <input type="text" name="duration" placeholder="Duration">
-      <label for="num-of-travelers">Number of Travelers</label>
-      <input type="text" name="num-of-travelers" placeholder="Number of Travelers">
+      <div>
+        <label for="date">Date</label>
+        <input type="text" name="date" placeholder="Date">
+        <label for="duration">Duration</label>
+        <input type="text" name="duration" placeholder="Duration">
+        <label for="num-of-travelers">Number of Travelers</label>
+        <input type="text" name="num-of-travelers" placeholder="Number of Travelers">
+      </div>
       <button>Calculate Trip Cost</button>
       <button>Submit</button>
       <h3>Pick a Destination Below</h3>
