Update sidebar divs

--- a/src/index.html
+++ b/src/index.html
@@ -18,19 +18,19 @@
     <aside>
       <h2>Trips</h2>
       <h3>Present</h3>
-        <div>
+        <div class="trips-box">
 
         </div>
       <h3>Pending</h3>
-        <div>
+        <div class="trips-box">
 
         </div>
       <h3>Past</h3>
-        <div>
+        <div class="trips-box">
 
       </div>
       <h3>Upcoming</h3>
-      <div>
+      <div class="trips-box">
 
       </div>
     </aside>
@@ -50,7 +50,7 @@
     </form>
     <main>
       <h2>All Destinations</h2>
-        <div>
+        <div class="destination-box">
 
         </div>
     </main>
