Build mvp for HTML and SCSS

--- a/src/index.html
+++ b/src/index.html
@@ -47,7 +47,7 @@
     </aside>
     <form action="">
       <h2>Request A Trip!</h2>
-      <div class="stacked">
+      <div class="input-form stacked">
         <label for="date">Date</label>
         <input type="text" name="date" placeholder="Date">
         <label for="duration">Duration</label>
@@ -62,10 +62,10 @@
     <main>
       <h2>All Destinations</h2>
         <section class="destinations-wrapper">
-          <div class="destinations-box stacked">
+          <div class="destinations-box">
             <h3>Location</h3>
             <img src="" alt="">
-            <div>
+            <div class="stacked">
               <label for="">Book</label>
               <input type="checkbox">
             </div>
