Add traveler's total amount spent tag

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,10 @@
         <img src="" alt="">
         <h2>"Yeah, it's that easy..."</h2>
       </div>
-      <h2>Welcome Traveler!</h2>
+      <div class="stacked">
+        <h2>Welcome Traveler!</h2>
+        <p>Total Amount Spent</p>
+      </div>
       <h1>Ready, Set, Travel</h1>
     </header>
     <aside>
@@ -63,7 +66,7 @@
       <h2>All Destinations</h2>
         <section class="destinations-wrapper">
           <div class="destinations-box">
-            <h3>Location</h3>
+            <p>Location</p>
             <img src="" alt="">
             <div class="stacked">
               <label for="">Book</label>
