--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
       <h1>Ready, Set, Travel</h1>
     </header>
     <aside>
-      <h2>Trips</h2>
+      <h2 class="trips" >Trips</h2>
       <h3>Present</h3>
         <div class="trips-box">
           <div class="destinations-box stacked">
@@ -63,11 +63,11 @@
       <h3>Pick a Destination Below</h3>
     </form>
     <main>
-      <h2>All Destinations</h2>
+      <h2 class="destination-header">All Destinations</h2>
         <section class="destinations-wrapper">
           <div class="destinations-box">
             <p>Location</p>
-            <img src="" alt="">
+            <img class="destination-img" src="https://images.unsplash.com/photo-1489171084589-9b5031ebcf9b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2089&q=80" alt="">
             <div class="stacked">
               <label for="">Book</label>
               <input type="checkbox">
