--- a/src/index.html
+++ b/src/index.html
@@ -21,27 +21,61 @@
     <aside>
       <h2 class="trips" >Trips</h2>
       <h3>Present</h3>
-        <div class="trips-box">
-          <div class="destinations-box stacked">
-            <h3>Location</h3>
-            <img src="" alt="">
-            <label for="">Book</label>
-            <input type="checkbox">
-          </div>
-          <div class="destinations-box stacked">
-            <h3>Location</h3>
-            <img src="" alt="">
-            <label for="">Book</label>
-            <input type="checkbox">
-          </div>
+      <div class="trips-box">
+        <div class="trips-card">
+          <img class="trip-img" src="https://images.unsplash.com/photo-1489171084589-9b5031ebcf9b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2089&q=80" alt="">
+          <p>Location</p>
+          <p>Date</p>
+          <p># of Travelers</p>
+          <p>Duration</p>
+          <p>Status</p>
         </div>
+        <div class="trips-card">
+          <img class="trip-img" src="https://images.unsplash.com/photo-1489171084589-9b5031ebcf9b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2089&q=80" alt="">
+          <p>Location</p>
+          <p>Date</p>
+          <p># of Travelers</p>
+          <p>Duration</p>
+          <p>Status</p>
+        </div>
+        <div class="trips-card">
+          <img class="trip-img" src="https://images.unsplash.com/photo-1489171084589-9b5031ebcf9b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2089&q=80" alt="">
+          <p>Location</p>
+          <p>Date</p>
+          <p># of Travelers</p>
+          <p>Duration</p>
+          <p>Status</p>
+        </div>
+        <div class="trips-card">
+          <img class="trip-img" src="https://images.unsplash.com/photo-1489171084589-9b5031ebcf9b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2089&q=80" alt="">
+          <p>Location</p>
+          <p>Date</p>
+          <p># of Travelers</p>
+          <p>Duration</p>
+          <p>Status</p>
+        </div>
+      </div>
       <h3>Pending</h3>
         <div class="trips-box">
-          
+          <div class="trips-card">
+            <img class="trip-img" src="https://images.unsplash.com/photo-1489171084589-9b5031ebcf9b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2089&q=80" alt="">
+            <p>Location</p>
+            <p>Date</p>
+            <p># of Travelers</p>
+            <p>Duration</p>
+            <p>Status</p>
+          </div>
         </div>
       <h3>Past</h3>
         <div class="trips-box">
-
+          <div class="trips-card">
+            <img class="trip-img" src="https://images.unsplash.com/photo-1489171084589-9b5031ebcf9b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2089&q=80" alt="">
+            <p>Location</p>
+            <p>Date</p>
+            <p># of Travelers</p>
+            <p>Duration</p>
+            <p>Status</p>
+          </div>
       </div>
       <h3>Upcoming</h3>
       <div class="trips-box">
@@ -65,7 +99,7 @@
     <main>
       <h2 class="destination-header">All Destinations</h2>
         <section class="destinations-wrapper">
-          <div class="destinations-box">
+          <div class="destinations-card">
             <p>Location</p>
             <img class="destination-img" src="https://images.unsplash.com/photo-1489171084589-9b5031ebcf9b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2089&q=80" alt="">
             <div class="stacked">
