Display greeting to the user

--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,9 @@
     <meta charset="utf-8">
     <title>Ready, Set, Travel</title>
     <link rel="stylesheet" type="text/scss" href="./css/base.scss">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
@@ -12,9 +15,9 @@
         <img src="" alt="">
         <h2>"Yeah, it's that easy..."</h2>
       </div>
-      <div class="stacked">
-        <h2>Welcome Traveler!</h2>
-        <p>Total Amount Spent</p>
+      <div class="stacked" id="greeting">
+        <!-- <h2 id="greeting">Welcome Traveler!</h2>
+        <p id="year-total">Total Amount Spent</p> -->
       </div>
       <h1>Ready, Set, Travel</h1>
     </header>
