--- a/src/index.html
+++ b/src/index.html
@@ -16,15 +16,13 @@
         <h2>"Yeah, it's that easy..."</h2>
       </div>
       <div class="stacked" id="greeting">
-        <!-- <h2 id="greeting">Welcome Traveler!</h2>
-        <p id="year-total">Total Amount Spent</p> -->
       </div>
       <h1>Ready, Set, Travel</h1>
     </header>
     <aside>
       <h2 class="trips" >Trips</h2>
       <h3>Present</h3>
-      <div class="trips-box">
+      <div class="trips-box" id="present-trips">
         <div class="trips-card">
           <img class="trip-img" src="https://images.unsplash.com/photo-1489171084589-9b5031ebcf9b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2089&q=80" alt="">
           <p>Location</p>
@@ -59,7 +57,7 @@
         </div>
       </div>
       <h3>Pending</h3>
-        <div class="trips-box">
+        <div class="trips-box" id="pending-trips">
           <div class="trips-card">
             <img class="trip-img" src="https://images.unsplash.com/photo-1489171084589-9b5031ebcf9b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2089&q=80" alt="">
             <p>Location</p>
@@ -70,20 +68,12 @@
           </div>
         </div>
       <h3>Past</h3>
-        <div class="trips-box">
-          <div class="trips-card">
-            <img class="trip-img" src="https://images.unsplash.com/photo-1489171084589-9b5031ebcf9b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2089&q=80" alt="">
-            <p>Location</p>
-            <p>Date</p>
-            <p># of Travelers</p>
-            <p>Duration</p>
-            <p>Status</p>
-          </div>
-      </div>
+        <div class="trips-box" id="past-trips">
+        
+        </div>
       <h3>Upcoming</h3>
-      <div class="trips-box">
-
-      </div>
+        <div class="trips-box" id="upcoming-trips">
+        </div>
     </aside>
     <form action="">
       <h2>Request A Trip!</h2>
