Display all of the destinations on the dashboard

--- a/src/index.html
+++ b/src/index.html
@@ -54,47 +54,8 @@
     </form>
     <main>
       <h2 class="destination-header">All Destinations</h2>
-        <section class="destinations-wrapper">
-          <div class="destinations-card">
-            <p>Location</p>
-            <img class="destination-img" src="https://images.unsplash.com/photo-1489171084589-9b5031ebcf9b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2089&q=80" alt="">
-            <div class="stacked">
-              <label for="">Book</label>
-              <input type="checkbox">
-            </div>
-          </div>
-          <div class="destinations-card">
-            <p>Location</p>
-            <img class="destination-img" src="https://images.unsplash.com/photo-1489171084589-9b5031ebcf9b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2089&q=80" alt="">
-            <div class="stacked">
-              <label for="">Book</label>
-              <input type="checkbox">
-            </div>
-          </div>
-          <div class="destinations-card">
-            <p>Location</p>
-            <img class="destination-img" src="https://images.unsplash.com/photo-1489171084589-9b5031ebcf9b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2089&q=80" alt="">
-            <div class="stacked">
-              <label for="">Book</label>
-              <input type="checkbox">
-            </div>
-          </div>
-          <div class="destinations-card">
-            <p>Location</p>
-            <img class="destination-img" src="https://images.unsplash.com/photo-1489171084589-9b5031ebcf9b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2089&q=80" alt="">
-            <div class="stacked">
-              <label for="">Book</label>
-              <input type="checkbox">
-            </div>
-          </div>
-          <div class="destinations-card">
-            <p>Location</p>
-            <img class="destination-img" src="https://images.unsplash.com/photo-1489171084589-9b5031ebcf9b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2089&q=80" alt="">
-            <div class="stacked">
-              <label for="">Book</label>
-              <input type="checkbox">
-            </div>
-          </div>
+        <section class="destinations-wrapper" id="destinations">
+          
         </section>
     </main>
     <!-- Do not include the index.js or main.bundle.js file here - it is done automatically by the webpack server -->
