Add id and querySelector to all inputs and buttons

--- a/src/index.html
+++ b/src/index.html
@@ -42,14 +42,14 @@
       <h2>Request A Trip!</h2>
       <div class="input-form stacked">
         <label for="date">Date</label>
-        <input type="text" name="date" placeholder="Date">
+        <input type="text" name="date" placeholder="Date" id="date">
         <label for="duration">Duration</label>
-        <input type="text" name="duration" placeholder="Duration">
+        <input type="text" name="duration" placeholder="Duration" id="duration">
         <label for="num-of-travelers">Number of Travelers</label>
-        <input type="text" name="num-of-travelers" placeholder="Number of Travelers">
+        <input type="text" name="num-of-travelers" placeholder="Number of Travelers" id="num-of-travelers">
       </div>
-      <button>Calculate Trip Cost</button>
-      <button>Submit</button>
+      <button id="calc-cost">Calculate Trip Cost</button>
+      <button id="submit-btn">Submit</button>
       <h3>Pick a Destination Below</h3>
     </form>
     <main>
