--- a/src/index.html
+++ b/src/index.html
@@ -39,18 +39,18 @@
           </div>
     </aside>
     <form action="">
-      <h2>Request A Trip!</h2>
-      <div class="input-form stacked">
+      <h2 class="trip-request">Request A Trip!</h2>
+      <div class="input-form ">
         <label for="date">Date</label>
         <input type="date" name="date" placeholder="Date" id="date">
-        <label for="duration">Duration</label>
+        <label class="input-label" for="duration">Duration</label>
         <input type="number" name="duration" placeholder="0" id="duration" min="1"  max="100">
-        <label for="num-of-travelers">Number of Travelers</label>
+        <label class="input-label" for="num-of-travelers">Number of Travelers</label>
         <input type="number" name="num-of-travelers" placeholder="0" id="num-of-travelers" min="1" max="100">
       </div>
-      <button id="calc-cost">Calculate Trip Cost</button>
+      <button class="input-btn" id="calc-cost">Calculate Trip Cost</button>
       <button id="submit-btn">Submit</button>
-      <h3>Pick a Destination Below</h3>
+      <h3 class="form-message">↓Pick a Destination Below↓</h3>
     </form>
     <main>
       <h2 class="destination-header">All Destinations</h2>
