--- a/src/index.html
+++ b/src/index.html
@@ -39,18 +39,23 @@
           </div>
     </aside>
     <form action="">
-      <h2 class="trip-request">Request A Trip!</h2>
       <div class="input-form ">
+      <h2 class="trip-request">Request A Trip!</h2>
         <label for="date">Date</label>
         <input type="date" name="date" placeholder="Date" id="date">
         <label class="input-label" for="duration">Duration</label>
         <input type="number" name="duration" placeholder="0" id="duration" min="1"  max="100">
         <label class="input-label" for="num-of-travelers">Number of Travelers</label>
         <input type="number" name="num-of-travelers" placeholder="0" id="num-of-travelers" min="1" max="100">
+        <button class="input-btn" id="calc-cost">Calculate Trip Cost</button>
+        <button id="submit-btn">Submit</button>
+        <h3 class="form-message">↓Pick a Destination Below↓</h3>
       </div>
-      <button class="input-btn" id="calc-cost">Calculate Trip Cost</button>
-      <button id="submit-btn">Submit</button>
-      <h3 class="form-message">↓Pick a Destination Below↓</h3>
+      <div class="stacked">
+        <h3 >Book Your Next Dream Vacation Today!</h3>
+        <p id="est-cost">Fill out all inputs and see how much it would cost right now!</p>
+      </div>
+      
     </form>
     <main>
       <h2 class="destination-header">All Destinations</h2>
