Show error message for the form inputs

--- a/src/index.html
+++ b/src/index.html
@@ -52,8 +52,8 @@
         <h3 class="form-message">↓Pick a Destination Below↓</h3>
       </div>
       <div class="stacked">
-        <h3 >Book Your Next Dream Vacation Today!</h3>
-        <p id="est-cost">Fill out all inputs and see how much it would cost right now!</p>
+        <h3>Book Your Next Dream Vacation Today!</h3>
+        <p id="form-info">See how much it would cost right now!</p>
       </div>
       
     </form>
