Change color scheme and update layout

--- a/src/index.html
+++ b/src/index.html
@@ -6,18 +6,19 @@
     <link rel="stylesheet" type="text/scss" href="./css/base.scss">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
     <header>
-      <div>
-        <img src="" alt="">
-        <h2>"Yeah, it's that easy..."</h2>
+      <div class="img-quote stacked">
+        <img src="./images/travel.png" alt="">
+        <h2 class="quote">"Yeah, it's that easy..."</h2>
       </div>
       <div class="stacked" id="greeting">
       </div>
-      <h1>Ready, Set, Travel</h1>
+      <h1 class="title">☁️Ready, Set, Travel☁️</h1>
     </header>
     <aside>
       <h2 class="trips" >Trips</h2>
