Finish traveler login

--- a/src/index.html
+++ b/src/index.html
@@ -17,17 +17,17 @@
         <h2 class="quote">"Yeah, it's that easy..."</h2>
       </div>
       <div class="stacked" id="greeting">
-        
+        <h2 class="welcome">Welcome, Traveler!</h2>
       </div>
       <h1 class="title">☁️Ready, Set, Travel☁️</h1>
     </header>
     <section class="login-page">
       <div class="login">
-        <h1>Login Page</h1>
+        <h1>☁️Ready, Set, Travel☁️</h1>
         <label for="username">Username</label>
-        <input type="text" name="username" placeholder="username">
+        <input type="text" name="username" placeholder="traveler##">
         <label for="password">Password</label>
-        <input type="text" name="password" placeholder="password">
+        <input type="text" name="password" placeholder="travel2020">
         <button class="login-button">Login</button>
       </div>
     </section>
