Finish login error checking but problems with post

--- a/src/index.html
+++ b/src/index.html
@@ -22,14 +22,14 @@
       <h1 class="title">☁️Ready, Set, Travel☁️</h1>
     </header>
     <section class="login-page">
-      <div class="login">
+      <form class="login">
         <h1>☁️Ready, Set, Travel☁️</h1>
         <label for="username">Username</label>
-        <input type="text" name="username" placeholder="traveler##">
+        <input type="text" name="username" placeholder="traveler##" required>
         <label for="password">Password</label>
-        <input type="text" name="password" placeholder="travel2020">
+        <input type="text" name="password" placeholder="travel2020" required>
         <button class="login-button">Login</button>
-      </div>
+      </form>
     </section>
     <aside class="sidebar hidden">
       <h2 class="trips" >Trips</h2>
