Fix login error message

--- a/src/index.html
+++ b/src/index.html
@@ -17,12 +17,15 @@
         <h2 class="quote">"Yeah, it's that easy..."</h2>
       </div>
       <div class="stacked" id="greeting">
+        
         <h2 class="welcome">Welcome, Traveler!</h2>
       </div>
+      
       <h1 class="title">☁️Ready, Set, Travel☁️</h1>
     </header>
     <section class="login-page">
       <form class="login">
+        <p class="login-error"></p>
         <h1>☁️Ready, Set, Travel☁️</h1>
         <label for="username">Username</label>
         <input type="text" name="username" placeholder="traveler##" required>
